
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct socket {int so_label; } ;
typedef int socket_t ;
typedef int kauth_cred_t ;


 int MAC_CHECK (int ,int ,int ,unsigned int,int ) ;
 int mac_socket_enforce ;
 int socket_check_ioctl ;

int
mac_socket_check_ioctl(kauth_cred_t cred, struct socket *so,
         unsigned int cmd)
{
 int error;







 MAC_CHECK(socket_check_ioctl, cred,
    (socket_t)so, cmd, so->so_label);
 return (error);
}
